2005-08-13  Ales Hakl  <ales at hakl dot net>

	* src/stream.c (consume_queue): Added one debugging output

	* src/dfsch.c (make_symbol): Similar problem in symbol handling

	* src/stream.c (dfsch_parser_create): BUGFIX: parser context
	wasn't garbage collected -> various parts of it (esp. input
	buffer) was blown away by collector considering it to be
	unreachable (this shoul hopefully fix some of SEGVs when using
	large heap)

2005-08-11  Ales Hakl  <ales at hakl dot net>

	* ChangeLog: reformated old entries to match style of new ones (to
	some extent)
	
	* README: Added paragraph about interactive interpreter

	* NEWS: Removed contents, it needs to have some system instead of
	current chaos (absolute chaos)

	* ChangeLog: added old entries from svn's ChangeLogs

	* src/repl.c: Added support for loading code on runtime

	* src/load.c: Renamed import to load
	Moved loading of scheme code from repl.c to load.c

	* src/repl.c: Readline TAB completion for scheme symbols
	(main): Cleaned up indentation support a bit

2005-08-10  Ales Hakl  <ales at hakl dot net>

	* Makefile.am: Moved libdfsch specific shared libraries to
	libdfsch_la_LIBADD.

2005-08-06  Ales Hakl  <ales at hakl dot net>

	* src/repl.c: Fixed race condition in SIGINT handling.

2005-08-05  Ales Hakl  <ales at hakl dot net>

	* src/stream.c, src/repl.c: Automatic indenting of interactive
	interpreter prompts

	* src/dfsch.c: Some basic support for features like symbol
	completion

2005-07-10  Ales Hakl  <ales at hakl dot net>
  
	* src/dfsch.c: Calculate hash size correctly from macros
  
  
2005-06-23  Ales Hakl  <ales at hakl dot net>
  
	* Makefile.am: removed targets and dependencies of dsc
  
  
2005-06-23  Ales Hakl  <dfox at users dot sourceforge dot net>
  
	* dsc: Removed from trunk branch (this thing is not interesting) 
  
  
2005-06-23  Ales Hakl  <ales at hakl dot net>
  
	* src/dfsch.c: Added PI constant
  
2005-05-25  Ales Hakl  <ales at hakl dot net>
  
	* Basics of scheme compiler.